# raze-rel-crate

./: README.md  WORKSPACE  raze.sh
mylib-rs/: BUILD.bazel  Cargo.toml
mylib-rs/src/: lib.rs
person-rs/: BUILD.bazel  Cargo.toml
person-rs/.cargo/: config
person-rs/src/: lib.rs
